--- a/PL_MVC/Web.config
+++ b/PL_MVC/Web.config
@@ -13,11 +13,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	 <add key="TipoExcel" value=".xlsx"/>
-	 <add key="RutaCargaMasiva" value="C:\Users\digis\Desktop\Nelly Sanchez\NCastilloProgramacionNCapas\PL_MVC\CargaMasiva"/>
+	 <add key="TipoExcel" value=".xlsx" />
+	 <add key="RutaCargaMasiva" value="C:\Users\digis\Desktop\Nelly Sanchez\NCastilloProgramacionNCapas\PL_MVC\CargaMasiva" />
+	 <add key="WebApi" value="http://localhost:55088/api/" />
     </appSettings>
 	<connectionStrings>
-	<add name="OleDbConnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Extended Properties=Excel 12.0 XML;Data Source="/>	
+	<add name="OleDbConnection" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Extended Properties=Excel 12.0 XML;Data Source=" />	
 	<add name="NCastilloProgramacionNCapasEntities" connectionString="metadata=res://*/NCastilloProgramacionNCapas.csdl|res://*/NCastilloProgramacionNCapas.ssdl|res://*/NCastilloProgramacionNCapas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=NCastilloProgramacionNCapas;user id=sa;password=pass@word1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
   <system.web>
@@ -79,12 +80,8 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:49826/ServiceAseguradora.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAseguradora"
-        contract="ServiceReferenceAseguradora.IServiceAseguradora" name="BasicHttpBinding_IServiceAseguradora" />
-      <endpoint address="http://localhost:49826/ServiceEmpleado.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceEmpleado"
-        contract="ServiceReferenceEmpleado.IServiceEmpleado" name="BasicHttpBinding_IServiceEmpleado" />
+      <endpoint address="http://localhost:49826/ServiceAseguradora.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAseguradora" contract="ServiceReferenceAseguradora.IServiceAseguradora" name="BasicHttpBinding_IServiceAseguradora" />
+      <endpoint address="http://localhost:49826/ServiceEmpleado.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceEmpleado" contract="ServiceReferenceEmpleado.IServiceEmpleado" name="BasicHttpBinding_IServiceEmpleado" />
     </client>
   </system.serviceModel>
 </configuration>
